:recycle: refactor: update fileList router group
